# massgenotyping

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
examples/: marker_data.csv  primer_fwd.fasta  primer_rev.fasta
massgenotyping/: __init__.py  allele_call.py  allele_check.py  argument_parser.py  base.py  demultiplex.py  denoise.py  find_ssrs.py  merge_pairs.py  show_alignment.py  trim_sequence.py  utils.py  variant_filter.py
src/massgenotyping/: __init__.py  allele_call.py  allele_check.py  argument_parser.py  base.py  demultiplex.py  denoise.py  find_ssrs.py  merge_pairs.py  show_alignment.py  trim_sequence.py  utils.py  variant_filter.py
tests/: test_find_ssrs.py
