[metadata]
name = massgenotyping
version = attr: massgenotyping.__version__
description = Python packages for microsatellite genotyping from amplicon sequencing data
long_description = file: README.rst
Home-page: https://github.com/kohyamat/massgenotyping
Author: Tetsuo I. Kohyama
Author-email: tetsuo_kohyama@ees.hokudai.ac.jp 
keywords = genotyping, microsatellite, NGS, amplicon sequencing
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
packages = find:
install_requires =
    biopython
    dataclasses; python_version=="3.6"
    dataclasses_json
    fuzzysearch
    matplotlib
    natsort
    numpy
    pandas
    python-Levenshtein
    seaborn
    tqdm

[options.entry_points]
console_scripts =
    mgt = massgenotyping:main
